--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Web Calculator</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="utils.css">
   
 </head>
 <body>
-  <h1 class="text-center">Welcome to Calculate Me!</h1>
+  <h1 class="text-center">Get the Result!</h1>
 <div class="container items-center flex flex-col  mx-auto m-w " >
   <div class="row">
     <input type="text" class="input"/>
